force-app/main/default/objects/Opportunity/fields/Commission__c.field-meta.xml
<CustomField>
    <fullName>Commission__c</fullName>
    <formula>IF(ISPICKVAL(StageName, &quot;Closed Won&quot;), 
   ROUND( Amount *0.02, 2),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commission</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>