force-app/main/default/objects/Opportunity/fields/Number_Of_Case__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Case__c</fullName>
    <label>Number Of Case</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>