force-app/main/default/objects/Opportunity/fields/Total_Assets_Count__c.field-meta.xml
<CustomField>
    <fullName>Total_Assets_Count__c</fullName>
    <label>Total Assets Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>